[gd_scene load_steps=30 format=3 uid="uid://317jw7syhomd"]

[ext_resource type="Script" path="res://scripts/Enemy.gd" id="1_qu4l4"]
[ext_resource type="PackedScene" uid="uid://dp3r8ufd1stss" path="res://scenes/fire.tscn" id="2_dqrxh"]
[ext_resource type="Texture2D" uid="uid://dcp043o0jbuhn" path="res://assets/EnemyAttackAnim (1).png" id="3_fh0xw"]
[ext_resource type="PackedScene" uid="uid://by6gecseg1eyb" path="res://scenes/HealthBar.tscn" id="5_dq5vn"]
[ext_resource type="AudioStream" uid="uid://xpa8wa4dhrvb" path="res://assets/tracks/Horror-Jumpscare-Sound-Effect-_LOUD_.ogg" id="6_yia1y"]
[ext_resource type="Texture2D" uid="uid://bmjuxauenjoiu" path="res://assets/temp/Light2D_texture.png" id="8_wfox2"]
[ext_resource type="AudioStream" uid="uid://c6jaobsievsou" path="res://assets/tracks/Deep-Impact-Sound-Effect-1_1.ogg" id="9_7fnyg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_y65sn"]
atlas = ExtResource("3_fh0xw")
region = Rect2(0, 0, 127, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_07wt3"]
atlas = ExtResource("3_fh0xw")
region = Rect2(128, 0, 127, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpyyq"]
atlas = ExtResource("3_fh0xw")
region = Rect2(256, 0, 127, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_aml8g"]
atlas = ExtResource("3_fh0xw")
region = Rect2(0, 128, 127, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yovn"]
atlas = ExtResource("3_fh0xw")
region = Rect2(128, 128, 127, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cs7g"]
atlas = ExtResource("3_fh0xw")
region = Rect2(256, 128, 127, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5r4k"]
atlas = ExtResource("3_fh0xw")
region = Rect2(0, 256, 127, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1e0a"]
atlas = ExtResource("3_fh0xw")
region = Rect2(128, 256, 127, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_grdd3"]
atlas = ExtResource("3_fh0xw")
region = Rect2(256, 256, 127, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxrin"]
atlas = ExtResource("3_fh0xw")
region = Rect2(0, 0, 127, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgm34"]
atlas = ExtResource("3_fh0xw")
region = Rect2(128, 0, 127, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rv7go"]
atlas = ExtResource("3_fh0xw")
region = Rect2(256, 0, 127, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_86ggs"]
atlas = ExtResource("3_fh0xw")
region = Rect2(0, 128, 127, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0fk8"]
atlas = ExtResource("3_fh0xw")
region = Rect2(128, 128, 127, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_00emh"]
atlas = ExtResource("3_fh0xw")
region = Rect2(256, 128, 127, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vemr"]
atlas = ExtResource("3_fh0xw")
region = Rect2(0, 256, 127, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5p0p"]
atlas = ExtResource("3_fh0xw")
region = Rect2(128, 256, 127, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_73b1n"]
atlas = ExtResource("3_fh0xw")
region = Rect2(256, 256, 127, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_kds7p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y65sn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07wt3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpyyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aml8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yovn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cs7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5r4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1e0a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_grdd3")
}],
"loop": true,
"name": &"idle",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxrin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgm34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rv7go")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86ggs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0fk8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00emh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vemr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5p0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73b1n")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5grap"]
radius = 426.011

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ncjxb"]
radius = 35.0
height = 92.0

[sub_resource type="CircleShape2D" id="CircleShape2D_030p2"]
radius = 108.042

[node name="Enemy" type="CharacterBody2D"]
scale = Vector2(0.5, 0.5)
collision_layer = 4
collision_mask = 3
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_qu4l4")

[node name="Fire" parent="." instance=ExtResource("2_dqrxh")]
scale = Vector2(0.1, 0.1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(0.678431, 0.27451, 0, 1)
position = Vector2(0, 12)
sprite_frames = SubResource("SpriteFrames_kds7p")
animation = &"idle"
offset = Vector2(0, -30)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 7
collision_mask = 7

[node name="FollowDetectionArea" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_5grap")

[node name="BodyCollisionArea" type="CollisionShape2D" parent="."]
position = Vector2(-2, -28)
shape = SubResource("CapsuleShape2D_ncjxb")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
navigation_layers = 3

[node name="PathTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(-3, -27)
shape = SubResource("CircleShape2D_030p2")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="HealthBar" parent="." instance=ExtResource("5_dq5vn")]
position = Vector2(-4, -109)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_yia1y")

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0.901961, 1, 0, 1)
energy = 0.5
texture = ExtResource("8_wfox2")

[node name="SoundEffects" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_7fnyg")
volume_db = 24.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="PathTimer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_timer_2_timeout"]
